# juegodepiedras-bortol-buttignol

./: CHANGELOG.md  Piedras.hs  README.md  TP.hs  instalacion-cabal.md  juegodepiedras-bortol-buttignol.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.6.5/: juegodepiedras-bortol-buttignol-0.1.0.0-inplace-Piedras.conf  package.cache
dist-newstyle/packagedb/ghc-8.8.4/: juegodepiedras-bortol-buttignol-0.1.0.0-inplace-Piedras.conf  package.cache
tests/: Tests.hs
